# JobWise

./: .gitignore  CLAUDE.md  FLUTTER_WEB_CONNECTION_FIX.md  Huy_Ky_Enhanced_Resume.txt  Huy_Ky_General_Cover_Letter.txt  IMPLEMENTATION_VERIFICATION.md  PRODUCTION_READY_VERIFICATION.md  Presentation.md  README.md  Report.md  analysis_results_4.txt  analysis_results_5.txt  analysis_results_6.txt  jobwise.db  temp_log_entry.md  test_jobwise.db
backend/: .env.example  .env.universal  .gitignore  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_SIMPLIFICATION_SUMMARY.md  BACKEND_DESIGN_DOCUMENT.md  CLEANUP_EXECUTION_SUMMARY.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  DOCUMENTATION_INDEX.md  ENV_CONFIG_FIX.md  FEATURE_IMPLEMENTATION_PLAN.md  FEATURE_IMPLEMENTATION_PLAN_CLEAN.md  IMPLEMENTATION_CHECKLIST.md  JOB_API_REDESIGN.md  RANKING_FIX_SUMMARY.md  README.md  add_application_status_column.py  add_content_structured_column.py  add_exports_table.py  add_writing_style_fields.py  alembic.ini  check_db_contents.py  check_db_tables.py  check_exports_schema.py  check_mock_jobs.py  check_profile_data.py  check_structured_content.py  cleanup-architecture.ps1  clear_rankings.py  collect_evaluation_responses.py  collect_responses_simple.py  create_test_profile.py  debug_generation_status.py  debug_skills.py  delete_test_profile.py  delete_user.py  direct_generation_demo.py  fix_export_metadata_column.py  fix_invalid_job_sources.py  (+75 more)
backend/.context/: backend-developer-summary.md
backend/Misc/: PROFILE_API_VERIFICATION_REPORT.md  VERIFICATION_REPORT.md  test_ai_generation.py  test_enhanced_descriptions.py  test_epic_structure.py  test_job_creation_complete.py
backend/Misc doc/: MOCK_JOBS_VERIFICATION.md  PROFILE_CLEANUP_GUIDE.md
backend/alembic/: env.py  schema.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/application/: __init__.py
backend/app/application/dtos/: auth_dtos.py  document_dtos.py  (+5 more)
backend/app/core/: __init__.py  config.py  dependencies.py  exceptions.py  logging.py  security.py  tracing.py
backend/app/domain/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/presentation/: __init__.py  v3_api.py
backend/data/: evaluation_queries.json  evaluation_responses.json  mock_jobs.json  model_selection_strategy.py  static_jobs.json  test_cover_letter.txt  test_master_resume.json  test_profile_create.json  test_resume.txt  test_user.json
backend/log/: backend-developer-log-test-consolidation.md  backend-developer-log.md
backend/migrations/: add_employment_type_to_jobs.py  add_source_text_to_writing_style_configs.py  v3_0_add_sample_storage_and_enhancements.py
backend/old-docs/: FEATURE_IMPLEMENTATION_PLAN_CLEAN.md  SERVER_STARTUP_README.md  SIMPLIFIED_ARCHITECTURE.puml  TESTING_EXAMPLES.md
backend/old-docs/diagrams/: sequence-diagrams.puml
backend/scripts/: debug_jobs_flow.py  fix_pydantic_syntax.py  inspect_my_jobs.py  seed_jobs.py
backend/tests/: conftest.py  run_jd_repo_smoke.py  test_auth.py  test_auth_additional.py  test_auth_api.py  test_auth_api_live.py  test_auth_protection.py  test_auth_router_errors.py  test_auth_service_branches.py  test_database_connection.py  test_environment.py  test_generation_api.py  test_generation_basic.py  test_job_api.py  test_job_api_live.py  test_job_description_repository.py  test_job_repository.py  test_job_service.py  test_jobs.json  test_jobs.py  test_jobs_api.py  test_models.py  test_preference_integration.py  test_profile_api.py  test_profile_api_live.py  test_sample_api_live.py  test_security_and_middleware.py  test_v3_real_samples.py  test_v3_samples_api.py
backend/tests/application/: test_profile_service.py
backend/tests/domain/: test_profile_entity.py
backend/tests/infrastructure/: test_profile_repository.py
backend/tests/integration/: test_generation_pipeline.py
backend/tests/profile/: test_profile_api_live.py  test_profile_bulk_operations_live.py  test_profile_granular_operations_live.py  test_profile_service.py
backend/uploads/cover_letters/: 3_7caf9b85-0d43-4484-9904-c2dafefaaf08.txt
backend/uploads/example_resumes/: 3_9ea4b3d4-f816-4a7a-a15e-4632a3de43b1.txt
(+485 files in other folders)
